# batteries_and_devices

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 6f531ed634d6_.py
app/: crud.py  database.py  main.py  models.py  schemas.py
static/css/: style.css
templates/: batteries.html  battery.html  device.html  devices.html  index.html
